--- a/work.html
+++ b/work.html
@@ -150,6 +150,9 @@
     <!-- CLIENTS SECTION END-->
     <footer>
         © 2015 HoloTrip  | Website by Aaron Meaney and Wagner de Oliveira | <a href="http://www.designbootstrap.com/" target="_blank">Theme by DesignBootstrap</a>
+		<br/>
+		<a href="https://twitter.com/HoloTrip"><img src="assets/img/twitter-icon.png"></img></a>
+		<a href="https://www.facebook.com/pages/Holo-Trip/471007859713579?"><img src="assets/img/square-facebook-128.png"></img></a>
     </footer>
     <!-- FOOTER SECTION END-->
     <!-- REQUIRED SCRIPTS FILES -->
